--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,13 +64,9 @@ flutter:
      - family: Old English
        fonts:
          - asset: assets/fonts/OldEnglishRegular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+     - family: Raleway
+       fonts:
+         - asset: assets/fonts/Roboto-Regular.ttf
+     - family: Roboto
+       fonts:
+         - asset: assets/fonts/Roboto-Regular.ttf
